# caseflow

./: .env.example  .gitignore  README.md
backend/: config.py  main.py  pyproject.toml
backend/agents/: prompts.py  research.py  synthesis.py  verification.py
backend/api/: routes.py  sse.py
backend/graph/: workflow.py
backend/mock/: cases.py  llm.py  search_results.py
backend/models/: case.py  memo.py  state.py
backend/tests/: test_workflow.py
backend/tools/: citation_parser.py  url_checker.py  web_search.py
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: agent-status.tsx  citation-card.tsx  citation-list.tsx  confidence-badge.tsx  example-queries.tsx  research-input.tsx  research-memo.tsx
frontend/src/hooks/: use-research.ts
frontend/src/lib/: api.ts  types.ts
