[project]
name = "caseflow"
version = "0.1.0"
description = "AI-powered legal research agent with citation verification"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.0.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx",
]
real = [
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
]

[tool.setuptools.packages.find]
include = ["models*", "agents*", "tools*", "graph*", "mock*", "api*"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
